<resources>
    <string name="app_name">Hafiz_Student_App</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="new_student">New student</string>
    <string name="login">Login</string>
    <string name="enter_the_student_s_name">Enter the student\'s name</string>
    <string name="new_student_create_account">New Student? Create account</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_new_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_class">Enter your class</string>
    <string name="studentname" />
    <string name="studentName" />
</resources>